--- a/st-what-to-eat/src/App.scss
+++ b/st-what-to-eat/src/App.scss
@@ -1049,7 +1049,10 @@ textarea::placeholder {
     background-color: rgba($color: #000000, $alpha: 0.4);
 }
 
-.hidden {
-    visibility: hidden;
+
+@media (max-width: 768px) {
+    .hidden {
+    transform: translateX(15rem);
     transition: var(--default-transition);
+    }
 }
